fix nav on small screen

--- a/public/stylesheets/_nav.sass
+++ b/public/stylesheets/_nav.sass
@@ -20,6 +20,7 @@ nav#mainNav
         @media (max-width: 480px)
             padding: 5px
             font-weight: 100
+            display: block
 
         a
             color: rgba(255,255,255,.7)
@@ -44,4 +45,6 @@ nav#mainNav
                 display: flex
                 margin-left: auto
                 list-style: none
+                @media (max-width: 480px)
+                    margin-top: 5px
      
